--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
 		],
 		"sourceMap": true,
 		"rootDir": "src",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
 		"strict": true   /* enable all strict type-checking options */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
