--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/LstHeart/vscode-wxread.git"
   },
   "publisher": "lstheart",
   "license": "MIT",
@@ -25,7 +25,7 @@
   ],
   "icon": "resources/logo.png",
   "activationEvents": [
-    "onCommand:wxread.start"
+    "*"
   ],
   "main": "./dist/extension.js",
   "contributes": {
@@ -41,7 +41,12 @@
           "type": "number",
           "default": 9661,
           "description": "代理服务端口"
-        }
+        },
+        "vscode-wxread.showStatusBarItem": {
+					"type": "boolean",
+					"default": true,
+					"description": "状态栏显示微信阅读图标"
+				}
       }
     }
   },
