--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
     "release": "standard-version",
-    "package": "vsce package --no-yarn"
+    "package": "vsce package --no-yarn",
+    "publish": "vsce publish --no-yarn"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json}": [
@@ -90,6 +91,7 @@
     "standard-version": "^9.3.2",
     "ts-loader": "^9.2.8",
     "typescript": "^4.5.5",
+    "vsce": "^2.7.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
