--- a/.github/workflows/publish-extension.yaml
+++ b/.github/workflows/publish-extension.yaml
@@ -23,7 +23,7 @@ jobs:
         run: |
           git config user.email ${{ secrets.USER_EMAIL }}
           git config user.name ${{ secrets.USER_NAME }}
-          git commit -m "test: test"
+          # git commit -m "test: test"
           # yarn release
       - name: Push changes
         uses: ad-m/github-push-action@master
