--- a/package.json
+++ b/package.json
@@ -83,8 +83,11 @@
     "@vscode/test-electron": "^2.1.3",
     "esbuild-loader": "^2.18.0",
     "eslint": "^8.14.0",
+    "get-port": "^6.1.2",
     "glob": "^7.2.0",
     "husky": "^7.0.4",
+    "koa": "^2.13.4",
+    "koa2-nginx": "^2.0.2",
     "lint-staged": "^12.4.1",
     "mocha": "^9.2.2",
     "prettier": "^2.6.2",
@@ -95,9 +98,5 @@
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
-  "dependencies": {
-    "@types/express": "^4.17.13",
-    "express": "^4.17.13",
-    "http-proxy-middleware": "^2.0.6"
-  }
+  "dependencies": {}
 }
