--- a/.vscodeignore
+++ b/.vscodeignore
@@ -2,6 +2,7 @@
 .vscode-test/**
 out/**
 node_modules/**
+build/**
 src/**
 .gitignore
 .yarnrc
@@ -15,3 +16,4 @@ vsc-extension-quickstart.md
 .husky/**
 commitlint.config.js
 .versionrc.js
+stats.html
