--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "vscode:prepublish": "yarn run build",
-    "compile": "webpack",
-    "watch": "webpack --watch",
-    "build": "webpack --mode production --devtool hidden-source-map",
+    "vscode:prepublish": "yarn run build-esbuild",
+    "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
+    "watch": "yarn run esbuild-base -- --sourcemap --watch",
+    "build": "yarn run esbuild-base --minify",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
@@ -63,7 +63,11 @@
     "test": "node ./out/test/runTest.js",
     "release": "standard-version -a",
     "package": "vsce package --no-yarn",
-    "publish": "vsce publish --no-yarn"
+    "publish": "vsce publish --no-yarn",
+    "build-webpack": "webpack -c ./build/webpack.config.js",
+    "build-esbuild": "node ./build/esbuild.config.js",
+    "build-vite": "vite build -c ./build/vite.config.js",
+    "build-rollup": "yarn run rollup -c ./build/rollup.config.js"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json}": [
@@ -74,28 +78,41 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@swc/core": "^1.2.179",
     "@types/glob": "^7.2.0",
+    "@types/koa": "^2.13.4",
     "@types/mocha": "^9.1.0",
     "@types/node": "14.x",
     "@types/vscode": "^1.51.0",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "@vscode/test-electron": "^2.1.3",
+    "esbuild": "^0.14.38",
     "esbuild-loader": "^2.18.0",
+    "esbuild-plugin-clean": "^0.9.0",
     "eslint": "^8.14.0",
-    "get-port": "^6.1.2",
     "glob": "^7.2.0",
     "husky": "^7.0.4",
-    "koa": "^2.13.4",
-    "koa2-nginx": "^2.0.2",
     "lint-staged": "^12.4.1",
     "mocha": "^9.2.2",
     "prettier": "^2.6.2",
+    "rollup": "^2.72.1",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-esbuild": "^4.9.1",
+    "rollup-plugin-swc3": "^0.3.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-visualizer": "^5.6.0",
     "standard-version": "^9.3.2",
-    "ts-loader": "^9.2.8",
     "typescript": "^4.5.5",
+    "vite": "^2.9.8",
     "vsce": "^2.7.0",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "get-port": "^6.1.2",
+    "koa": "^2.13.4",
+    "koa2-nginx": "^2.0.2"
   }
 }
