--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "vscode:prepublish": "yarn run build-esbuild",
+    "vscode:prepublish": "yarn run build-webpack",
     "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
     "watch": "yarn run esbuild-base -- --sourcemap --watch",
     "build": "yarn run esbuild-base --minify",
@@ -90,11 +90,14 @@
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "@vscode/test-electron": "^2.1.3",
+    "connect": "^3.7.0",
     "esbuild": "^0.14.38",
     "esbuild-loader": "^2.18.0",
     "esbuild-plugin-clean": "^0.9.0",
     "eslint": "^8.14.0",
+    "get-port": "^6.1.2",
     "glob": "^7.2.0",
+    "http-proxy-middleware": "^2.0.6",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
     "mocha": "^9.2.2",
@@ -110,9 +113,6 @@
     "vite": "^2.9.8",
     "vsce": "^2.7.0",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
-    "get-port": "^6.1.2",
-    "koa": "^2.13.4",
-    "koa2-nginx": "^2.0.2"
+    "webpack-cli": "^4.9.2"
   }
 }
