--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "rollup-plugin-visualizer": "^5.6.0",
     "standard-version": "^9.3.2",
     "typescript": "^4.5.5",
+    "umi-request": "^1.4.0",
     "vite": "^2.9.8",
     "vsce": "^2.7.0",
     "webpack": "^5.70.0",
