refactor: 用undici替换umi-request库，减小打包体积

--- a/package.json
+++ b/package.json
@@ -125,5 +125,8 @@
     "vsce": "^2.7.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "undici": "^5.5.1"
   }
 }
