--- a/package.json
+++ b/package.json
@@ -56,6 +56,11 @@
           "type": "string",
           "default": "微信读书",
           "description": "标签页标题"
+        },
+        "vscode-wxread.panelOpacity": {
+          "type": "number",
+          "default": 1,
+          "description": "页面不透明度"
         }
       }
     }
@@ -127,6 +132,6 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "undici": "^5.5.1"
+    "undici": "^5.7.0"
   }
 }
