--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "@vscode/test-electron": "^2.1.3",
+    "@vscode/vsce": "^2.7.0",
     "connect": "^3.7.0",
     "esbuild": "^0.14.38",
     "esbuild-loader": "^2.18.0",
@@ -130,13 +131,11 @@
     "rollup-plugin-visualizer": "^5.6.0",
     "standard-version": "^9.3.2",
     "typescript": "^4.5.5",
-    "umi-request": "^1.4.0",
     "vite": "^2.9.8",
-    "vsce": "^2.7.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "undici": "^5.7.0"
+    "undici": "^5.23.0"
   }
 }
